// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FAQ component > snapshot > matches snapshot (closed state) 1`] = `
<section
  class="max-w-3xl mx-auto px-5 py-20"
>
  <div
    class="text-center mb-10"
  >
    <h2
      class="text-2xl font-black mb-3"
    >
      자주 묻는 질문
    </h2>
    <p
      class="text-gray-500 text-sm"
    >
      서비스 이용에 대해 궁금한 점을 확인하세요
    </p>
  </div>
  <div
    class="space-y-3"
  >
    <div
      class="glass rounded-2xl overflow-hidden transition-all"
    >
      <button
        class="w-full flex items-center justify-between p-5 text-left hover:bg-white/5 transition"
      >
        <span
          class="font-semibold text-sm pr-4"
        >
          어떤 지원사업을 매칭해주나요?
        </span>
        <svg
          class="text-gray-500 flex-shrink-0 transition-transform duration-200 "
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
        >
          <path
            d="M6 9l6 6 6-6"
          />
        </svg>
      </button>
    </div>
    <div
      class="glass rounded-2xl overflow-hidden transition-all"
    >
      <button
        class="w-full flex items-center justify-between p-5 text-left hover:bg-white/5 transition"
      >
        <span
          class="font-semibold text-sm pr-4"
        >
          AI 매칭은 정확한가요?
        </span>
        <svg
          class="text-gray-500 flex-shrink-0 transition-transform duration-200 "
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
        >
          <path
            d="M6 9l6 6 6-6"
          />
        </svg>
      </button>
    </div>
    <div
      class="glass rounded-2xl overflow-hidden transition-all"
    >
      <button
        class="w-full flex items-center justify-between p-5 text-left hover:bg-white/5 transition"
      >
        <span
          class="font-semibold text-sm pr-4"
        >
          사업자등록증을 업로드하면 안전한가요?
        </span>
        <svg
          class="text-gray-500 flex-shrink-0 transition-transform duration-200 "
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
        >
          <path
            d="M6 9l6 6 6-6"
          />
        </svg>
      </button>
    </div>
    <div
      class="glass rounded-2xl overflow-hidden transition-all"
    >
      <button
        class="w-full flex items-center justify-between p-5 text-left hover:bg-white/5 transition"
      >
        <span
          class="font-semibold text-sm pr-4"
        >
          AI 신청서 생성은 어떻게 작동하나요?
        </span>
        <svg
          class="text-gray-500 flex-shrink-0 transition-transform duration-200 "
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
        >
          <path
            d="M6 9l6 6 6-6"
          />
        </svg>
      </button>
    </div>
    <div
      class="glass rounded-2xl overflow-hidden transition-all"
    >
      <button
        class="w-full flex items-center justify-between p-5 text-left hover:bg-white/5 transition"
      >
        <span
          class="font-semibold text-sm pr-4"
        >
          무료로 이용할 수 있나요?
        </span>
        <svg
          class="text-gray-500 flex-shrink-0 transition-transform duration-200 "
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
        >
          <path
            d="M6 9l6 6 6-6"
          />
        </svg>
      </button>
    </div>
  </div>
</section>
`;

exports[`FAQ component > snapshot > matches snapshot (first question open) 1`] = `
<section
  class="max-w-3xl mx-auto px-5 py-20"
>
  <div
    class="text-center mb-10"
  >
    <h2
      class="text-2xl font-black mb-3"
    >
      자주 묻는 질문
    </h2>
    <p
      class="text-gray-500 text-sm"
    >
      서비스 이용에 대해 궁금한 점을 확인하세요
    </p>
  </div>
  <div
    class="space-y-3"
  >
    <div
      class="glass rounded-2xl overflow-hidden transition-all"
    >
      <button
        class="w-full flex items-center justify-between p-5 text-left hover:bg-white/5 transition"
      >
        <span
          class="font-semibold text-sm pr-4"
        >
          어떤 지원사업을 매칭해주나요?
        </span>
        <svg
          class="text-gray-500 flex-shrink-0 transition-transform duration-200 rotate-180"
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
        >
          <path
            d="M6 9l6 6 6-6"
          />
        </svg>
      </button>
      <div
        class="px-5 pb-5 text-sm text-gray-400 leading-relaxed"
      >
        기업마당 공공API를 통해 중소벤처기업부, 소상공인시장진흥공단 등 정부 기관의 지원사업을 실시간으로 수집합니다. 현재 500건 이상의 지원사업을 분석하고 있습니다.
      </div>
    </div>
    <div
      class="glass rounded-2xl overflow-hidden transition-all"
    >
      <button
        class="w-full flex items-center justify-between p-5 text-left hover:bg-white/5 transition"
      >
        <span
          class="font-semibold text-sm pr-4"
        >
          AI 매칭은 정확한가요?
        </span>
        <svg
          class="text-gray-500 flex-shrink-0 transition-transform duration-200 "
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
        >
          <path
            d="M6 9l6 6 6-6"
          />
        </svg>
      </button>
    </div>
    <div
      class="glass rounded-2xl overflow-hidden transition-all"
    >
      <button
        class="w-full flex items-center justify-between p-5 text-left hover:bg-white/5 transition"
      >
        <span
          class="font-semibold text-sm pr-4"
        >
          사업자등록증을 업로드하면 안전한가요?
        </span>
        <svg
          class="text-gray-500 flex-shrink-0 transition-transform duration-200 "
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
        >
          <path
            d="M6 9l6 6 6-6"
          />
        </svg>
      </button>
    </div>
    <div
      class="glass rounded-2xl overflow-hidden transition-all"
    >
      <button
        class="w-full flex items-center justify-between p-5 text-left hover:bg-white/5 transition"
      >
        <span
          class="font-semibold text-sm pr-4"
        >
          AI 신청서 생성은 어떻게 작동하나요?
        </span>
        <svg
          class="text-gray-500 flex-shrink-0 transition-transform duration-200 "
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
        >
          <path
            d="M6 9l6 6 6-6"
          />
        </svg>
      </button>
    </div>
    <div
      class="glass rounded-2xl overflow-hidden transition-all"
    >
      <button
        class="w-full flex items-center justify-between p-5 text-left hover:bg-white/5 transition"
      >
        <span
          class="font-semibold text-sm pr-4"
        >
          무료로 이용할 수 있나요?
        </span>
        <svg
          class="text-gray-500 flex-shrink-0 transition-transform duration-200 "
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
        >
          <path
            d="M6 9l6 6 6-6"
          />
        </svg>
      </button>
    </div>
  </div>
</section>
`;

exports[`FAQ component > snapshot > matches snapshot (last question open) 1`] = `
<section
  class="max-w-3xl mx-auto px-5 py-20"
>
  <div
    class="text-center mb-10"
  >
    <h2
      class="text-2xl font-black mb-3"
    >
      자주 묻는 질문
    </h2>
    <p
      class="text-gray-500 text-sm"
    >
      서비스 이용에 대해 궁금한 점을 확인하세요
    </p>
  </div>
  <div
    class="space-y-3"
  >
    <div
      class="glass rounded-2xl overflow-hidden transition-all"
    >
      <button
        class="w-full flex items-center justify-between p-5 text-left hover:bg-white/5 transition"
      >
        <span
          class="font-semibold text-sm pr-4"
        >
          어떤 지원사업을 매칭해주나요?
        </span>
        <svg
          class="text-gray-500 flex-shrink-0 transition-transform duration-200 "
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
        >
          <path
            d="M6 9l6 6 6-6"
          />
        </svg>
      </button>
    </div>
    <div
      class="glass rounded-2xl overflow-hidden transition-all"
    >
      <button
        class="w-full flex items-center justify-between p-5 text-left hover:bg-white/5 transition"
      >
        <span
          class="font-semibold text-sm pr-4"
        >
          AI 매칭은 정확한가요?
        </span>
        <svg
          class="text-gray-500 flex-shrink-0 transition-transform duration-200 "
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
        >
          <path
            d="M6 9l6 6 6-6"
          />
        </svg>
      </button>
    </div>
    <div
      class="glass rounded-2xl overflow-hidden transition-all"
    >
      <button
        class="w-full flex items-center justify-between p-5 text-left hover:bg-white/5 transition"
      >
        <span
          class="font-semibold text-sm pr-4"
        >
          사업자등록증을 업로드하면 안전한가요?
        </span>
        <svg
          class="text-gray-500 flex-shrink-0 transition-transform duration-200 "
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
        >
          <path
            d="M6 9l6 6 6-6"
          />
        </svg>
      </button>
    </div>
    <div
      class="glass rounded-2xl overflow-hidden transition-all"
    >
      <button
        class="w-full flex items-center justify-between p-5 text-left hover:bg-white/5 transition"
      >
        <span
          class="font-semibold text-sm pr-4"
        >
          AI 신청서 생성은 어떻게 작동하나요?
        </span>
        <svg
          class="text-gray-500 flex-shrink-0 transition-transform duration-200 "
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
        >
          <path
            d="M6 9l6 6 6-6"
          />
        </svg>
      </button>
    </div>
    <div
      class="glass rounded-2xl overflow-hidden transition-all"
    >
      <button
        class="w-full flex items-center justify-between p-5 text-left hover:bg-white/5 transition"
      >
        <span
          class="font-semibold text-sm pr-4"
        >
          무료로 이용할 수 있나요?
        </span>
        <svg
          class="text-gray-500 flex-shrink-0 transition-transform duration-200 rotate-180"
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
        >
          <path
            d="M6 9l6 6 6-6"
          />
        </svg>
      </button>
      <div
        class="px-5 pb-5 text-sm text-gray-400 leading-relaxed"
      >
        AI 맞춤 매칭과 결과 3건 확인은 완전 무료입니다. 사업자등록증 AI 분석도 무료로 제공됩니다. AI 신청서 생성은 무료 토큰으로 체험하고, 소진 후에는 유료로 무제한 이용할 수 있습니다.
      </div>
    </div>
  </div>
</section>
`;
